# mri-sim-rs

./: Cargo.toml  Todo.md  build.rs
crates/epg/: Cargo.toml
crates/epg-py/: Cargo.toml  build.rs  pyproject.toml
crates/epg-py/src/: lib.rs
crates/epg-vis/: Cargo.toml
crates/epg-vis/src/: main.rs
crates/epg/src/: epg.rs  lib.rs  sequences.rs  types.rs
crates/epg/src/sequences/: space.rs
epg/: common.py
sandbox/: runner.py
src/: epg.rs  lib.rs  main.rs  sequences.rs  tissues.rs  types.rs
src/epg/: arr.rs  common.rs  vec.rs
src/sequences/: fid.rs  fse.rs  se.rs  space.rs
