[package]
name = "epg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
nalgebra = "0.31.2"
ndarray-rand = "0.14.0"
num-complex = "0.4.2"
ndarray-stats = "0.5.1"
rand = "0.8.5"
rand_distr = "0.4.3"
approx = "0.5.1"
nshare = "0.9.0"
image = "0.24.4"
clap = "4.0.18"
eframe = "0.19.0"
egui = "0.19.0"
