[package]
name = "epg-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "epg_py"
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.4", features = ["chrono"] }

[dependencies]
epg = { version="0.1.0", path="../epg" }
ndarray = { version = "0.15.6", features = ["approx-0_5", "rayon"] }
nalgebra = "0.31.2"
ndarray-rand = "0.14.0"
num-complex = "0.4.2"
ndarray-stats = "0.5.1"
ndarray-numtest = "0.2.0"
rand = "0.8.5"
rand_distr = "0.4.3"
approx = "0.5.1"
nshare = "0.9.0"
image = "0.24.4"
clap = "4.0.18"
pyo3-built = "0.4"

[dependencies.pyo3]
version = "0.18.0"
features = ["extension-module",  "abi3-py37"]

